--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <div id="g_id_onload"
-     data-client_id="YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com"
+     data-client_id="1011549977562-qpih8umnatggo5as43lp0t1h0312se5a.apps.googleusercontent.com"
      data-callback="onGoogleLogin"
      data-auto_prompt="false"></div>
 <div class="g_id_signin"
