--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@ let userIdToken = "";
 
 function onGoogleLogin(response) {
   userIdToken = response.credential;
-  // 서버로 idToken 전송해서 권한 체크
   fetch(SHEETS_API_URL, {
     method: "POST",
     headers: { "Content-Type": "application/x-www-form-urlencoded" },
@@ -76,12 +75,15 @@ function onGoogleLogin(response) {
       localStorage.setItem("userEmail", data.email);
       localStorage.setItem("userLevel", data.level);
       alert("✅ 로그인 성공: " + data.email);
-      // 로그인 성공시만 실제 데이터 요청 (POST+idToken 방식)
       loadItems();
       loadSkills();
       loadFormulas();
     } else {
-      alert("❌ 권한이 없습니다.");
+      // 여기서 기존 상태를 리셋!
+      localStorage.removeItem("userEmail");
+      localStorage.removeItem("userLevel");
+      alert("❌ 권한이 없습니다. (로그아웃됩니다)");
+      location.reload();  // or UI를 로그인 화면으로 전환
     }
   });
 }
