--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body>
+  <button id="logoutBtn" onclick="logout()">로그아웃</button>
   <div id="g_id_onload"
      data-client_id="1011549977562-qpih8umnatggo5as43lp0t1h0312se5a.apps.googleusercontent.com"
      data-callback="onGoogleLogin"
@@ -197,7 +198,12 @@ function onGoogleLogin(response) {
       document.getElementById("result").textContent = `결과: ${result}`;
     }
 
-
+function logout() {
+  localStorage.removeItem("userEmail");
+  localStorage.removeItem("userLevel");
+  userIdToken = "";
+  location.reload();
+}
     
     window.onload = function () {
 
